syntax = "proto3";

service ChatService {
  rpc GetServerInformation(Nothing) returns (ServerInformation);
  rpc SubscribeToChannel(Nothing) returns (stream ChatToClient);
  rpc SendChat(ChatToServer) returns (Nothing);
}

message ChatToServer {
  string content = 1;
}

message ChatToClient {
  string author = 1;
  string content = 2;
  //TODO: Maybe additional IRC-like goodies like a timestamp?
}

message ServerInformation {
  string topic = 1;
}

message Nothing{} //TODO: Replace with google's empty?